; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_vfsstat.c_sqlite3_vfsstat_init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_vfsstat.c_sqlite3_vfsstat_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__, %struct.TYPE_6__* }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i64 }

@SQLITE_OK = common dso_local global i32 0, align 4
@vstat_vfs = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@SQLITE_OK_LOAD_PERMANENTLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3_vfsstat_init(i32* %0, i8** %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* @SQLITE_OK, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @SQLITE_EXTENSION_INIT2(i32* %9)
  %11 = call %struct.TYPE_6__* @sqlite3_vfs_find(i32 0)
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vstat_vfs, i32 0, i32 1), align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vstat_vfs, i32 0, i32 1), align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = add i64 4, %14
  store i64 %15, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vstat_vfs, i32 0, i32 0, i32 0), align 8
  %16 = call i32 @sqlite3_vfs_register(%struct.TYPE_5__* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vstat_vfs, i32 0, i32 0), i32 1)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @SQLITE_OK, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %31

20:                                               ; preds = %3
  %21 = load i32*, i32** %4, align 8
  %22 = load i8**, i8*** %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @vstatRegister(i32* %21, i8** %22, i32* %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @SQLITE_OK, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = call i32 @sqlite3_auto_extension(i32 (i32*, i8**, i32*)* @vstatRegister)
  store i32 %29, i32* %7, align 4
  br label %30

30:                                               ; preds = %28, %20
  br label %31

31:                                               ; preds = %30, %3
  %32 = load i32, i32* %7, align 4
  %33 = load i32, i32* @SQLITE_OK, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %31
  %36 = load i32, i32* @SQLITE_OK_LOAD_PERMANENTLY, align 4
  store i32 %36, i32* %7, align 4
  br label %37

37:                                               ; preds = %35, %31
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @SQLITE_EXTENSION_INIT2(i32*) #1

declare dso_local %struct.TYPE_6__* @sqlite3_vfs_find(i32) #1

declare dso_local i32 @sqlite3_vfs_register(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @vstatRegister(i32*, i8**, i32*) #1

declare dso_local i32 @sqlite3_auto_extension(i32 (i32*, i8**, i32*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
